--- a/LMS System/Views/Courses/Details.cshtml
+++ b/LMS System/Views/Courses/Details.cshtml
@@ -52,11 +52,18 @@
         <dd>
             <br />
             <table class="module">
-                <tr>
-                    <th>Name</th>
-                    <th>Start date</th>
-                    <th>End date</th>
-                </tr>
+                @if (Model.Modules.Count == 0)
+                {
+                    <text> Course has no modules</text>
+                }
+                else
+                {
+                    <tr>
+                        <th>Name</th>
+                        <th>Start date</th>
+                        <th>End date</th>
+                    </tr>
+                }
                 @if (User.IsInRole("student"))
                 {
                     foreach (var module in Model.Modules)
