--- a/LMS System/Views/Shared/_Layout.cshtml
+++ b/LMS System/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
     <div class="container body-content">
         <!-- #region Breadcrumb -->
         @{ 
-            @Html.Raw(Html.BuildBreadcrumbNavigation());
+            @Html.Raw(Html.BuildBreadcrumbNavigation("", "", ""));
         }
         <!-- #endregion -->
         @RenderBody()
