--- a/LMS System/Views/Courses/Details.cshtml
+++ b/LMS System/Views/Courses/Details.cshtml
@@ -108,7 +108,7 @@
                             @if (Model.StartDate > module.StartDate || Model.EndDate < module.EndDate || module.StartDate > module.EndDate)
                             {
                                 <td class="tablemargin">
-                                    Some dates are out of boundry!
+                                    Some dates are out of bounds!
                                 </td>
                             }
                         </tr>
