fixed some  "back to course details" links

--- a/LMS System/Views/Account/CourseTeacherView.cshtml
+++ b/LMS System/Views/Account/CourseTeacherView.cshtml
@@ -113,7 +113,7 @@
     }
 }
 <div>
-    @Html.ActionLink("Back to course", "Details", "Courses", new { id = (int ?)ViewBag.CourseId }, null)
+    @Html.ActionLink("Back to course details", "Details", "Courses", new { id = (int ?)ViewBag.CourseId }, null)
 </div>
 
 @section Scripts {
