--- a/LMS System/Views/Modules/Delete.cshtml
+++ b/LMS System/Views/Modules/Delete.cshtml
@@ -49,7 +49,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to details", "Details", "Courses", new {id = ViewBag.CourseID })
+            @Html.ActionLink("Back to course details", "Details", "Courses", new {id = ViewBag.CourseID }, null)
         </div>
     }
 </div>
