--- a/LMS System/Views/Activities/IndexFiles.cshtml
+++ b/LMS System/Views/Activities/IndexFiles.cshtml
@@ -51,6 +51,7 @@
             {
                 int? parentId = ViewBag.parentId;
                 <div>@Html.ActionLink("Delete", "DeleteFile", new { id = item.Id, parentId = parentId })</div>
+                <div>@Html.ActionLink("Edit", "EditFile", new { id = item.Id, parentId = parentId })</div>
             }
         </td>
     </tr>
