--- a/LMS System/Views/Courses/Edit.cshtml
+++ b/LMS System/Views/Courses/Edit.cshtml
@@ -58,7 +58,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to course details", "Details", "Courses", new { Id = Model.Id }, null)
 </div>
 
 @section Scripts {
