--- a/LMS System/Views/Activities/CreateUpload.cshtml
+++ b/LMS System/Views/Activities/CreateUpload.cshtml
@@ -11,7 +11,7 @@
     <h2 style="color:red">@ViewBag.Error</h2>
 }
 
-@using (Html.BeginForm("ActivityUpload", "Activities", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("FileUpload", "Activities", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
 
 
