--- a/LMS System/Views/Modules/CreateUpload.cshtml
+++ b/LMS System/Views/Modules/CreateUpload.cshtml
@@ -11,13 +11,13 @@
     <h2 style="color:red">@ViewBag.Error</h2>
 }
 
-@using (Html.BeginForm("ActivityUpload", "Activities", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("FileUpload", "Modules", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
 
 
     if (ViewBag.Parent != null)
     {
-        List<LMS_System.Models.Activity> act = ViewBag.Parent;
+        List<LMS_System.Models.Module> act = ViewBag.Parent;
 
         int? parentId = act[0].Id;
         if (parentId == null)
@@ -28,14 +28,7 @@
         <div id="hidden">
             @Html.Hidden("parentId", parentId);
         </div>
-    <div class="form-group">
-        @if(act[0].Assignment)
-        {
-            <p>The uploaded document will be an assignment and deadline is @act[0].EndDate</p>
-        }
-        <p>Upload a file for activity: <label>@act[0].Name </label> </p>
-        
-    </div>
+   
         <input type="file" name="file"/>
 
         <br />
