--- a/LMS System/Views/Courses/Edit.cshtml
+++ b/LMS System/Views/Courses/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Redigera kurs</h2>
+<h2>Edit course</h2>
 
 
 @using (Html.BeginForm())
@@ -51,7 +51,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Uppdatera" class="btn btn-default" />
+                <input type="submit" value="Uppdate" class="btn btn-default" />
             </div>
         </div>
     </div>
