--- a/LMS System/Views/Activities/Details.cshtml
+++ b/LMS System/Views/Activities/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 
-@Html.ActionLink("Show files", "IndexFiles", new { parentId = Model.Id })
+@Html.ActionLink("Show files", "IndexFiles", new { parentId = Model.Id, ActivityId = Model.Id })
 
 
 <div>
