--- a/LMS System/Views/Home/About.cshtml
+++ b/LMS System/Views/Home/About.cshtml
@@ -2,6 +2,9 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p style="width:500px">
+    This is a learning management system for teachers, students and others involved 
+    in education that provides information, tools and resources to support and enhance 
+    educational delivery and management.
+</p>
