--- a/LMS System/Views/Courses/Details.cshtml
+++ b/LMS System/Views/Courses/Details.cshtml
@@ -21,6 +21,9 @@
     @Html.ActionLink("Add student", "CourseTeacherView", "Account",
                                                        new { id = Model.Id, orderBy = "firstname" },
                                                        new { @class = "btn btn-default" })
+    @Html.ActionLink("Show Schedule", "Schedule", "Courses",
+                                                       new { id = Model.Id },
+                                                       new { @class = "btn btn-default" })
 </div>
 }
 
