--- a/LMS System/Views/Modules/Create.cshtml
+++ b/LMS System/Views/Modules/Create.cshtml
@@ -33,7 +33,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control", @min = Model.Course.StartDate.ToShortDateString(), @max = Model.Course.EndDate.ToShortDateString() } })
+                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control", @min = Model.Course.StartDate.ToShortDateString(), @max = Model.Course.EndDate.ToShortDateString(), @value = ViewBag.StartDate } })
                 <script type="text/javascript">
                     $('#StartDate').change(function () {
                         $("#EndDate").attr("min", $('#StartDate').val());
