Minor fixes Schedule

--- a/LMS System/Views/Courses/Details.cshtml
+++ b/LMS System/Views/Courses/Details.cshtml
@@ -24,6 +24,7 @@
     @Html.ActionLink("Show Schedule", "Schedule", "Courses",
                                                        new { id = Model.Id },
                                                        new { @class = "btn btn-default" })
+
 </div>
 }
 else
@@ -32,8 +33,12 @@ else
         @Html.ActionLink("Show students", "CourseTeacherView", "Account",
                                                  new { id = Model.Id, orderBy = "firstname" },
                                                  new { @class = "btn btn-default" })
+        @Html.ActionLink("Show Schedule", "Schedule", "Courses",
+                                                       new { id = Model.Id },
+                                                       new { @class = "btn btn-default" })
     </div>
 }
+
 
 <div>
     <hr />
