--- a/LMS System/Content/Site.css
+++ b/LMS System/Content/Site.css
@@ -31,6 +31,7 @@ textarea {
 tr.found{
     background-color:#EEEEEE;
 }
-.weekendbg{
+.weekdelimiter{
     background-color: darksalmon;
+    border-bottom: 10px;
 }
