--- a/LMS System/Views/Modules/IndexFiles.cshtml
+++ b/LMS System/Views/Modules/IndexFiles.cshtml
@@ -42,41 +42,11 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-     @{
-         string Filename;
-         string name = item.Name;
-
-         //int pos = name.IndexOf()
-
-         char delimiter = '_';
-         string[] words = name.Split(delimiter);
-
-
-         if (words.Count() > 5)
-         {
-             //int total = words.Count();
-             //string w;
-             //for (int i = words.Count()-1; i < words.Count(); i++)
-             //{
-             //    Filename = Filename+words[i];
-             //}
-             string w1 = words[4];
-             string w2 = words[5];
-             Filename = w1 + "_" + w2;
-
-         }
-
-         else
-         {
-             Filename = words[4];
-
-         }
-
 
         <div>
-            @Html.ActionLink(Filename, "Download", new { FileName = @item.Name });
+            @Html.ActionLink(@item.Name, "Download", new { FilePath = @item.FilePath, Name = @item.Name });
         </div>
-    }
+    
         </td>
 
         <td>
