--- a/LMS System/Content/CourseDetails.css
+++ b/LMS System/Content/CourseDetails.css
@@ -1,3 +1,7 @@
-﻿table.modules td {
-    padding-right:20px;
+﻿table.modules th a {
+    color: white;
+}
+
+table.table-striped tr:nth-child(odd) {
+    background-color: lemonchiffon;
 }
