--- a/LMS System/Views/Activities/Create.cshtml
+++ b/LMS System/Views/Activities/Create.cshtml
@@ -7,7 +7,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Add new activity</h2>
 
 
 @using (Html.BeginForm()) 
@@ -15,14 +15,8 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Activity</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-
-
-
-
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -74,14 +68,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Add activity" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Details", "Modules", new { Id = ViewBag.ModuleId }, null)
+    @Html.ActionLink("Back to module details", "Details", "Modules", new { Id = ViewBag.ModuleId }, null)
 </div>
 
 @section Scripts {
