Breadcrumbs enabled for activities

--- a/LMS System/Views/Shared/_Layout.cshtml
+++ b/LMS System/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 
-                <a href="/Courses"><img src="~/Images/logo-lexicon2x.gif" width="110" height="38"/></a>
+                <a href="/Courses"><img src="~/Images/logo-lexicon2x.gif" width="150"/></a>
             </div>
             <div class="navbar-collapse collapse">
                
