--- a/LMS System/Views/Courses/Index.cshtml
+++ b/LMS System/Views/Courses/Index.cshtml
@@ -14,7 +14,7 @@
 </p>
 }
 
-<table class="table">
+<table class="table table-striped table-bordered">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
@@ -28,7 +28,7 @@
         <th>
             @Html.DisplayNameFor(model => model.EndDate)
         </th>
-        <th></th>
+        <th>Adminitration</th>
     </tr>
 
 @foreach (var item in Model) {
@@ -48,21 +48,24 @@
 
 
         <td>
-            @if (User.IsInRole("teacher"))
-            {
-                <div>
+            <div class="row">
+                @if (User.IsInRole("teacher"))
+                {
+
                     @*@Html.Action("CourseTeacherView","Accounts" )*@
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", "Courses", new { id = item.Id }, null) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </div>
-            }
-            else
-            {
-                <div>
-                    @Html.ActionLink("Details", "Details", new { id = item.Id })
-                </div>
-            }
+                    <div class="col-md-3"> @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-default btn-xs" }) </div>
+                    <div class="col-md-3">@Html.ActionLink("Details", "Details", "Courses", new { id = item.Id }, new { @class = "btn btn-default btn-xs" }) </div>
+                    <div class="col-md-3"> @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })</div>
+
+                }
+                else
+                {
+                    <div class="col-md-3">
+                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })
+                    </div>
+                }
+            </div>
+
 </td>
     </tr>
 }
