--- a/LMS System/Views/Courses/Details.cshtml
+++ b/LMS System/Views/Courses/Details.cshtml
@@ -5,7 +5,6 @@
 }
 
 <head>
-    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
     <link rel="stylesheet" href="~/Content/CourseDetails.css" type="text/css" />
 </head>
 
@@ -83,8 +82,8 @@ else
 
         <dd>
             <br/>
-            <table class="table table-striped table-bordered modules">
-                <thead class="thead-inverse">
+            <table class="table table-bordered lms">
+                <thead>
                     <tr>
                         <th>
                             <a href="?orderby=name" data-toggle="tooltip" title="Sort by name">Name</a>
@@ -98,6 +97,12 @@ else
                         <th>
                             <a href="?orderby=duration" data-toggle="tooltip" title="Sort by duration">Duration</a>
                         </th>
+                        @if (User.IsInRole("teacher"))
+                        {
+                        <th>
+                            <a href="#"> Administration</a>
+                        </th>
+                        }
                     </tr>
                 </thead>
                 @if (User.IsInRole("student"))
