--- a/LMS System/Views/Shared/_Layout.cshtml
+++ b/LMS System/Views/Shared/_Layout.cshtml
@@ -43,18 +43,37 @@
 
     <div class="container body-content">
         <!-- #region Breadcrumb -->
-        @{ 
+        @{
             @Html.Raw(Html.BuildBreadcrumbNavigation("", "", ""));
         }
         <!-- #endregion -->
         @RenderBody()
         <hr />
+    </div>
+
+    <div id="wrapper">
+        <!--sidebar-->
+        <div id="sidebar wrapper">
+            <ul class="nav nav-pills nav-stacked sidebar-nav">
+                <li>  @Html.ActionLink("Home", "Index", "Home") </li>
+                <li>  @Html.ActionLink("Contact", "Contact", "Home") </li>
+                <li>  @Html.ActionLink("About", "About", "Home") </li>
+            </ul>
+        </div>
+
+        <!--sidebar wrapper-->
+        <!--pagecontent-->
+    
+      
         <footer>
             <p>&copy; @DateTime.Now.Year - LMS System</p>
         </footer>
-        
 
-    </div>
+  
+    <!--#page-content-wrapper-->
+  </div>
+
+  
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
